--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-gray-50;
-}
-
-input {
-  /** Remove shadow on Safari iOS */
-  -webkit-appearance: none;
+html, body, #__next {
+  @apply w-full h-full;
 }
